--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/libraries/Webduino"]
 	path = src/libraries/Webduino
 	url = https://daitangio@github.com/daitangio/Webduino
+[submodule "src/libraries/aiko_arduino"]
+	path = src/libraries/aiko_arduino
+	url = https://github.com/geekscape/aiko_arduino
